--- a/Resources/Private/Partials/ContentElements/Media/Type.html
+++ b/Resources/Private/Partials/ContentElements/Media/Type.html
@@ -1,9 +1,10 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
 <f:comment>Give renderCaption default value 1 if not set (see https://usetypo3.com/24-fluid-tips.html#c457)</f:comment>
 {renderCaption -> f:or(alternative: '1') -> f:variable(name: 'renderCaption')}
+<f:comment>If you need extra classes for Media/Rendering/Image picture tag, set variable pictureClasses when calling this partial</f:comment>
 <f:switch expression="{file.properties.type}">
     <f:case value="2">
-        <f:render partial="Media/Type/Image" arguments="{file: file, data: data, settings: settings, variants: variants, renderCaption: renderCaption}" />
+        <f:render partial="Media/Type/Image" arguments="{file: file, data: data, settings: settings, variants: variants, renderCaption: renderCaption, pictureClasses: pictureClasses}" />
     </f:case>
     <f:case value="3">
         <f:render partial="Media/Type/Audio" arguments="{file: file, data: data, settings: settings}" />
@@ -13,13 +14,13 @@
     </f:case>
     <f:case value="5">
         <f:comment>PDF</f:comment>
-        <f:render partial="Media/Type/Image" arguments="{file: file, data: data, settings: settings, variants: variants, renderCaption: renderCaption}" />
+        <f:render partial="Media/Type/Image" arguments="{file: file, data: data, settings: settings, variants: variants, renderCaption: renderCaption, pictureClasses: pictureClasses}" />
     </f:case>
     <f:defaultCase>
         <f:comment>Deal with EXT:news images</f:comment>
         <f:if condition="{file.originalResource}">
             <f:then>
-                <f:render partial="Media/Type" arguments="{file: file.originalResource, data: data, settings: settings, variants: variants, renderCaption: renderCaption}" />
+                <f:render partial="Media/Type" arguments="{file: file.originalResource, data: data, settings: settings, variants: variants, renderCaption: renderCaption, pictureClasses: pictureClasses}" />
             </f:then>
             <f:else>
                 <!-- NOT SUPPORTED MEDIA TYPE -->
