--- a/Resources/Public/Scss/Theme/_thumbnail-menu.scss
+++ b/Resources/Public/Scss/Theme/_thumbnail-menu.scss
@@ -6,6 +6,8 @@
 // Variables
 //
 $thumbnail-menu-background: $primary !default;
+$thumbnail-menu-background-opacity: 0.85 !default;
+$thumbnail-menu-background-opacity-hover: 0.5 !default;
 $thumbnail-menu-color: findColorInvert($thumbnail-menu-background) !default;
 
 //
@@ -26,7 +28,7 @@ $thumbnail-menu-color: findColorInvert($thumbnail-menu-background) !default;
 
 .thumbnail-menu-image {
   overflow: hidden;
-
+  height: 100%;
   picture,
   img {
     width: 100%;
@@ -59,7 +61,7 @@ $thumbnail-menu-color: findColorInvert($thumbnail-menu-background) !default;
       left: 0;
       width: 100%;
       height: 100%;
-      background-color: rgba($thumbnail-menu-background, 0.85);
+      background-color: rgba($thumbnail-menu-background, $thumbnail-menu-background-opacity);
     }
 
     .thumbnail-menu-caption-inner {
@@ -106,7 +108,7 @@ $thumbnail-menu-color: findColorInvert($thumbnail-menu-background) !default;
       &:focus {
         .thumbnail-menu-image {
           &:after {
-            opacity: 0.5;
+            opacity: $thumbnail-menu-background-opacity-hover;
           }
 
           picture,
