--- a/Resources/Private/Partials/ContentElements/Media/Type.html
+++ b/Resources/Private/Partials/ContentElements/Media/Type.html
@@ -2,9 +2,10 @@
 <f:comment>Give renderCaption default value 1 if not set (see https://usetypo3.com/24-fluid-tips.html#c457)</f:comment>
 {renderCaption -> f:or(alternative: '1') -> f:variable(name: 'renderCaption')}
 <f:comment>If you need extra classes for Media/Rendering/Image picture tag, set variable pictureClasses when calling this partial</f:comment>
+<f:comment>If you need extra classes for Media/Rendering/Image img tag, set variable imgClasses when calling this partial</f:comment>
 <f:switch expression="{file.properties.type}">
     <f:case value="2">
-        <f:render partial="Media/Type/Image" arguments="{file: file, data: data, settings: settings, variants: variants, renderCaption: renderCaption, pictureClasses: pictureClasses}" />
+        <f:render partial="Media/Type/Image" arguments="{file: file, data: data, settings: settings, variants: variants, renderCaption: renderCaption, pictureClasses: pictureClasses, imgClasses: imgClasses}" />
     </f:case>
     <f:case value="3">
         <f:render partial="Media/Type/Audio" arguments="{file: file, data: data, settings: settings}" />
@@ -14,13 +15,13 @@
     </f:case>
     <f:case value="5">
         <f:comment>PDF</f:comment>
-        <f:render partial="Media/Type/Image" arguments="{file: file, data: data, settings: settings, variants: variants, renderCaption: renderCaption, pictureClasses: pictureClasses}" />
+        <f:render partial="Media/Type/Image" arguments="{file: file, data: data, settings: settings, variants: variants, renderCaption: renderCaption, pictureClasses: pictureClasses, imgClasses: imgClasses}" />
     </f:case>
     <f:defaultCase>
         <f:comment>Deal with EXT:news images</f:comment>
         <f:if condition="{file.originalResource}">
             <f:then>
-                <f:render partial="Media/Type" arguments="{file: file.originalResource, data: data, settings: settings, variants: variants, renderCaption: renderCaption, pictureClasses: pictureClasses}" />
+                <f:render partial="Media/Type" arguments="{file: file.originalResource, data: data, settings: settings, variants: variants, renderCaption: renderCaption, pictureClasses: pictureClasses, imgClasses: imgClasses}" />
             </f:then>
             <f:else>
                 <!-- NOT SUPPORTED MEDIA TYPE -->
