--- a/Resources/Private/Partials/ContentElements/Media/Type/Image.html
+++ b/Resources/Private/Partials/ContentElements/Media/Type/Image.html
@@ -4,7 +4,7 @@
     <f:if condition="{data.image_zoom}">
         <f:then>
             <a href="{f:uri.image(image: file, maxHeight: settings.lightbox.image.maxHeight, maxWidth: settings.lightbox.image.maxWidth)}" title="{file.properties.title}" data-lightbox-caption="{file.properties.description}" class="{settings.lightbox.cssClass}" data-lightbox-width="{asd:lastImageInfo(property: 'width')}" data-lightbox-height="{asd:lastImageInfo(property: 'height')}" rel="{settings.lightbox.prefix}-{data.uid}">
-                <f:render partial="Media/Rendering/Image" arguments="{file: file, data: data, settings: settings, variants: variants, pictureClasses: pictureClasses}" />
+                <f:render partial="Media/Rendering/Image" arguments="{file: file, data: data, settings: settings, variants: variants, pictureClasses: pictureClasses, imgClasses: imgClasses}" />
                 <f:if condition="{file.properties.link}">
                     <f:link.typolink class="button is-primary is-hidden" parameter="{file.properties.link}">{asd:typolinkTitle(parameter: file.properties.link)}</f:link.typolink>
                 </f:if>
@@ -14,11 +14,11 @@
             <f:if condition="{file.properties.link}">
                 <f:then>
                     <f:link.typolink parameter="{file.properties.link}" title="{file.properties.title}">
-                        <f:render partial="Media/Rendering/Image" arguments="{file: file, data: data, settings: settings, variants: variants, pictureClasses: pictureClasses}" />
+                        <f:render partial="Media/Rendering/Image" arguments="{file: file, data: data, settings: settings, variants: variants, pictureClasses: pictureClasses, imgClasses: imgClasses}" />
                     </f:link.typolink>
                 </f:then>
                 <f:else>
-                    <f:render partial="Media/Rendering/Image" arguments="{file: file, data: data, settings: settings, variants: variants, pictureClasses: pictureClasses}" />
+                    <f:render partial="Media/Rendering/Image" arguments="{file: file, data: data, settings: settings, variants: variants, pictureClasses: pictureClasses, imgClasses: imgClasses}" />
                 </f:else>
             </f:if>
         </f:else>
