[FEATURE] Add scss variables for address

--- a/Resources/Public/Scss/Theme/_address.scss
+++ b/Resources/Public/Scss/Theme/_address.scss
@@ -1,8 +1,10 @@
+$address-spacing-top-phone-email: 2rem !default;
+
 address{
   font-style: normal;
   #phone, #email{
     &:not(:first-child){
-      margin-top: 2rem;
+      margin-top: $address-spacing-top-phone-email;
     }
   }
   #phone + #email{
