--- a/Resources/Public/Scss/Theme/_carousel.scss
+++ b/Resources/Public/Scss/Theme/_carousel.scss
@@ -16,6 +16,7 @@ $carousel-content-padding-mobile: $carousel-content-padding !default;
 $carousel-content-text-alignment: center !default;
 $carousel-content-text-padding: 2em 4em !default;
 $carousel-content-max-width: 80% !default;
+$carousel-content-max-width-desktop: $carousel-content-max-width !default;
 $carousel-content-max-width-tablet: $carousel-content-max-width !default;
 $carousel-content-background-dark: transparentize($black, 40%) !default;
 $carousel-content-background-dark-color: $light !default;
@@ -263,6 +264,9 @@ $flickity-page-dots-padding: 0 !default;
       padding: $carousel-content-text-padding;
       text-align: $carousel-content-text-alignment;
       max-width: $carousel-content-max-width;
+      @include desktop-only {
+        max-width: $carousel-content-max-width-desktop;
+      }
       @include tablet-only {
         max-width: $carousel-content-max-width-tablet;
       }
