[BUGFIX] Update rte.scss to match css used in RTE

--- a/Resources/Public/Scss/Rte/rte.scss
+++ b/Resources/Public/Scss/Rte/rte.scss
@@ -6,6 +6,8 @@
 @import "../../Contrib/bulma-scss/elements/box";
 @import "../../Contrib/bulma-scss/elements/notification";
 @import "../../Contrib/bulma-scss/elements/table";
+@import "../../Contrib/bulma-scss/helpers/color";
+@import "../../Contrib/bulma-scss/helpers/typography";
 
 // Make button selectable again
 .button{
