--- a/Resources/Private/Templates/WebsiteModule/Overview.html
+++ b/Resources/Private/Templates/WebsiteModule/Overview.html
@@ -10,6 +10,7 @@
 
 <f:section name="content">
 	<h1><f:translate key="LLL:EXT:bulma_package/Resources/Private/Language/locallang_websitemodule.xlf:overview.title" /></h1>
+	<f:flashMessages />
 	<f:if condition="{pages}">
 		<f:then>
 			<div class="table-fit">
