--- a/Resources/Private/Partials/ContentElements/Media/Rendering/Image.html
+++ b/Resources/Private/Partials/ContentElements/Media/Rendering/Image.html
@@ -1,21 +1,28 @@
-<html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
+<html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" xmlns:asd="http://typo3.org/ns/AgrosupDijon/BulmaPackage/ViewHelpers" data-namespace-typo3-fluid="true">
 <picture class="{pictureClasses}">
-    <f:for each="{variants}" key="name" as="variant">
-        <f:variable name="breakpoint">{variant.breakpoint as integer}</f:variable>
-        <f:variable name="width">{variant.width as integer}</f:variable>
-        <f:if condition="{width}">
-            <f:variable name="mediaQuery">{f:if(condition: breakpoint, then: 'media="(min-width: {breakpoint}px)"')}</f:variable>
-            <f:if condition="{variant.sizes}">
-                <f:variable name="srcset" value="" />
-                <f:for each="{variant.sizes}" key="sizeKey" as="sizeConfig" iteration="iteration">
-                    <f:variable name="sizeWidth">{sizeConfig.multiplier as float}</f:variable>
-                    <f:variable name="sizeWidth">{sizeWidth * width}</f:variable>
-                    <f:variable name="srcset">{srcset}{f:uri.image(image: file, cropVariant: 'default', maxWidth: sizeWidth)} {sizeKey}{f:if(condition: iteration.isLast, else: ',')}</f:variable>
-                </f:for>
-            </f:if>
-            <source data-variant="{name}" data-maxwidth="{width}" {mediaQuery->f:format.raw()} srcset="{srcset}">
-        </f:if>
-    </f:for>
-    <img class="{imgClasses}" src="{f:uri.image(image: file, cropVariant: 'default', maxWidth: variants.default.width)}" title="{file.properties.title}" alt="{file.properties.alternative}">
+    <f:if condition="{file.mimeType} == 'image/svg+xml'">
+        <f:then>
+            <asd:inlineSvg class="{imgClasses}" image="{file}" />
+        </f:then>
+        <f:else>
+            <f:for each="{variants}" key="name" as="variant">
+                <f:variable name="breakpoint">{variant.breakpoint as integer}</f:variable>
+                <f:variable name="width">{variant.width as integer}</f:variable>
+                <f:if condition="{width}">
+                    <f:variable name="mediaQuery">{f:if(condition: breakpoint, then: 'media="(min-width: {breakpoint}px)"')}</f:variable>
+                    <f:if condition="{variant.sizes}">
+                        <f:variable name="srcset" value="" />
+                        <f:for each="{variant.sizes}" key="sizeKey" as="sizeConfig" iteration="iteration">
+                            <f:variable name="sizeWidth">{sizeConfig.multiplier as float}</f:variable>
+                            <f:variable name="sizeWidth">{sizeWidth * width}</f:variable>
+                            <f:variable name="srcset">{srcset}{f:uri.image(image: file, cropVariant: 'default', maxWidth: sizeWidth)} {sizeKey}{f:if(condition: iteration.isLast, else: ',')}</f:variable>
+                        </f:for>
+                    </f:if>
+                    <source data-variant="{name}" data-maxwidth="{width}" {mediaQuery->f:format.raw()} srcset="{srcset}">
+                </f:if>
+            </f:for>
+            <img class="{imgClasses}" src="{f:uri.image(image: file, cropVariant: 'default', maxWidth: variants.default.width)}" title="{file.properties.title}" alt="{file.properties.alternative}">
+        </f:else>
+    </f:if>
 </picture>
 </html>
