--- a/Resources/Public/Scss/Theme/_thumbnail-menu.scss
+++ b/Resources/Public/Scss/Theme/_thumbnail-menu.scss
@@ -37,7 +37,8 @@ $thumbnail-menu-caption-title-weight: $weight-bold !default;
   overflow: hidden;
   height: 100%;
   picture,
-  img {
+  img,
+  svg {
     width: 100%;
     height: 100%;
     object-fit: cover;
