[BUGFIX] Fix svg in Icon Groups not being displayed on some browsers

--- a/Resources/Private/Templates/ContentElements/IconGroup.html
+++ b/Resources/Private/Templates/ContentElements/IconGroup.html
@@ -42,8 +42,16 @@
                         <f:if condition="{item.data.icon_set} == '' && {item.iconFile.0}">
                             <f:then>
                                 <span class="icon {item.data.icon_size}">
-                                    <f:render partial="Media/Rendering/Image"
-                                              arguments="{file: item.iconFile.0, data: data, settings: settings, variants: variants}"/>
+                                    <f:comment>To avoid some browsers not displaying the svg, we don't want it to be wrapped in a picture tag like it would be if rendered by Media/Rendering/Image partial</f:comment>
+                                    <f:if condition="{item.iconFile.0.mimeType} == 'image/svg+xml'">
+                                        <f:then>
+                                            <asd:inlineSvg image="{item.iconFile.0}" />
+                                        </f:then>
+                                        <f:else>
+                                            <f:render partial="Media/Rendering/Image"
+                                                      arguments="{file: item.iconFile.0, data: data, settings: settings, variants: variants}"/>
+                                        </f:else>
+                                    </f:if>
                                 </span>
                             </f:then>
                             <f:else if="{item.data.icon}">
