[TASK] Improve mobile navbar-menu

--- a/Resources/Public/Scss/Theme/_body.scss
+++ b/Resources/Public/Scss/Theme/_body.scss
@@ -1,4 +1,4 @@
-body{
-  // Fix panel menu trouble on chrome
-  overflow-x: hidden;
-}
+//body{
+//  // Fix panel menu trouble on chrome
+//  overflow-x: hidden;
+//}
