[BUGFIX] Small improvement to responsive design for icon group

--- a/Resources/Public/Scss/Theme/_icon_group.scss
+++ b/Resources/Public/Scss/Theme/_icon_group.scss
@@ -27,6 +27,7 @@
   }
   .content{
     flex-grow: 1;
+    word-break: break-word;
   }
   &-top{
     .icon-group-item{
@@ -71,5 +72,10 @@
   }
   .icon{
     flex-shrink: 0;
+  }
+  &-right, &-left{
+    .is-xxl{
+      max-width: 50%;
+    }
   }
 }
