--- a/Resources/Private/Templates/WebsiteElement/Partners.html
+++ b/Resources/Private/Templates/WebsiteElement/Partners.html
@@ -1,4 +1,4 @@
-<html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
+<html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" xmlns:asd="http://typo3.org/ns/AgrosupDijon/BulmaPackage/ViewHelpers" data-namespace-typo3-fluid="true">
 <f:if condition="{files}">
     <section id="partners" class="section">
         <div class="container">
@@ -13,17 +13,11 @@
                         <f:if condition="{file.properties.link}">
                             <f:then>
                                 <f:link.typolink parameter="{file.properties.link}" title="{file.properties.title}">
-                                    <picture>
-                                        <img src="{f:uri.image(image: file, maxWidth: settings.image.maxWidth)}" title="{file.properties.title}"
-                                             alt="{file.properties.alternative}">
-                                    </picture>
+                                    <f:render section="logo" arguments="{file: file}" />
                                 </f:link.typolink>
                             </f:then>
                             <f:else>
-                                <picture>
-                                    <img src="{f:uri.image(image: file, maxWidth: settings.image.maxWidth)}" title="{file.properties.title}"
-                                         alt="{file.properties.alternative}">
-                                </picture>
+                                <f:render section="logo" arguments="{file: file}" />
                             </f:else>
                         </f:if>
                     </figure>
@@ -32,4 +26,10 @@
         </div>
     </section>
 </f:if>
+
+<f:section name="logo">
+    <picture>
+        <f:image image="{file}" maxWidth="{settings.maxWidth}" maxHeight="{settings.maxHeight}" title="{file.properties.title}" alt="{file.properties.alternative}" />
+    </picture>
+</f:section>
 </html>
