[BUGFIX] Fix transparentize() parameters

--- a/Resources/Public/Scss/Theme/_carousel.scss
+++ b/Resources/Public/Scss/Theme/_carousel.scss
@@ -18,16 +18,16 @@ $carousel-content-text-padding: 2em 4em !default;
 $carousel-content-max-width: 80% !default;
 $carousel-content-max-width-desktop: $carousel-content-max-width !default;
 $carousel-content-max-width-tablet: $carousel-content-max-width !default;
-$carousel-content-background-dark: transparentize($black, 40%) !default;
+$carousel-content-background-dark: transparentize($black, 0.4) !default;
 $carousel-content-background-dark-color: $light !default;
-$carousel-content-background-light: transparentize($light, 40%) !default;
+$carousel-content-background-light: transparentize($light, 0.4) !default;
 $carousel-content-text-light-color: $light !default;
 $carousel-content-text-dark-color: $dark !default;
 $carousel-control-primary: $dark !default;
 $carousel-control-secondary: $white !default;
 $carousel-control-radius: 50% !default;
 $flickity-control-radius: $carousel-control-radius !default;
-$flickity-button-background: transparentize($carousel-control-secondary, 25%) !default;
+$flickity-button-background: transparentize($carousel-control-secondary, 0.25) !default;
 $flickity-button-background-hover: $carousel-control-secondary !default;
 $flickity-button-color: $carousel-control-primary !default;
 $flickity-page-dots-background: $carousel-control-primary !default;
