--- a/Resources/Private/Templates/News/News/List.html
+++ b/Resources/Private/Templates/News/News/List.html
@@ -32,6 +32,9 @@
 
 	<f:if condition="{news}">
 		<f:then>
+			<f:if condition="!{settings.hidePagination} && {settings.list.paginate.insertAbove}">
+				<f:render partial="List/Pagination" arguments="{pagination: pagination.pagination, paginator: pagination.paginator}" />
+			</f:if>
 			<div class="news-list-view columns is-multiline is-mobile" id="news-container-{contentObjectData.uid}">
 				<f:if condition="{settings.hidePagination}">
 					<f:then>
@@ -40,11 +43,9 @@
 						</f:for>
 					</f:then>
 					<f:else>
-						<n:widget.paginate objects="{news}" as="paginatedNews" configuration="{settings.list.paginate}" initial="{offset:settings.offset,limit:settings.limit,recordId:contentObjectData.uid}">
-							<f:for each="{paginatedNews}" as="newsItem" iteration="iterator">
-								<f:render partial="List/Item" arguments="{newsItem: newsItem,settings:settings,iterator:iterator,pageData:pageData}" />
-							</f:for>
-						</n:widget.paginate>
+						<f:for each="{pagination.paginator.paginatedItems}" as="newsItem" iteration="iterator">
+							<f:render partial="List/Item" arguments="{newsItem: newsItem,settings:settings,iterator:iterator}" />
+						</f:for>
 					</f:else>
 				</f:if>
 				<f:if condition="{settings.listPid}">
@@ -56,6 +57,9 @@
 					</div>
 				</f:if>
 			</div>
+			<f:if condition="!{settings.hidePagination} && {settings.list.paginate.insertBelow}">
+				<f:render partial="List/Pagination" arguments="{pagination: pagination.pagination, paginator: pagination.paginator}" />
+			</f:if>
 		</f:then>
 		<f:else>
 			<div class="notification is-warning">
