--- a/Resources/Private/Partials/ContentElements/Media/Type/Image.html
+++ b/Resources/Private/Partials/ContentElements/Media/Type/Image.html
@@ -3,12 +3,20 @@
 
     <f:if condition="{data.image_zoom}">
         <f:then>
-            <a href="{f:uri.image(image: file, maxHeight: settings.lightbox.image.maxHeight, maxWidth: settings.lightbox.image.maxWidth)}" title="{file.properties.title}" data-lightbox-caption="{file.properties.description}" class="{settings.lightbox.cssClass}" data-lightbox-width="{asd:lastImageInfo(property: 'width')}" data-lightbox-height="{asd:lastImageInfo(property: 'height')}" rel="{settings.lightbox.prefix}-{data.uid}">
+            <asd:link.lightbox
+                    image="{file}"
+                    maxHeight="{settings.lightbox.image.maxHeight}"
+                    maxWidth="{settings.lightbox.image.maxWidth}"
+                    class="{settings.lightbox.cssClass}"
+                    rel="{settings.lightbox.prefix}-{data.uid}"
+                    title="{file.properties.title}"
+                    caption="{file.properties.description}"
+            >
                 <f:render partial="Media/Rendering/Image" arguments="{file: file, data: data, settings: settings, variants: variants, pictureClasses: pictureClasses, imgClasses: imgClasses}" />
                 <f:if condition="{file.properties.link}">
                     <f:link.typolink class="button is-primary is-hidden" parameter="{file.properties.link}">{asd:typolinkTitle(parameter: file.properties.link)}</f:link.typolink>
                 </f:if>
-            </a>
+            </asd:link.lightbox>
         </f:then>
         <f:else>
             <f:if condition="{file.properties.link}">
