[BUGFIX] Display again in lightbox the long gone button when the image has a link property

--- a/Resources/Public/Scss/Theme/_photoswipe.scss
+++ b/Resources/Public/Scss/Theme/_photoswipe.scss
@@ -426,6 +426,9 @@ a.pswp__share--download {
 }
 .pswp__caption__subtitle div + a{
     margin-top: 10px;
+    &.is-hidden{
+        display: inline-block !important;
+    }
 }
 
 .pswp__caption--empty {
